# Control-Labyrinth-Robot

./: .gitignore  Controller.py  CueNetV2.py  Davis346Reader.py  DisturbanceCompensator.py  EventPlot.py  MPC.py  MPC_LSQ.py  Params.py  Plotter.py  README.md  RecordedDataPlotter.py  ScoreMatrixGenerator.py  StateDeviationPlot.py  camera_params.pkl  camera_params_full.pkl  davis346_config.json  davis346_test.py  path-custom-labyrinth-1.npy  path-custom-labyrinth-2.npy  path-labyrinth.npy  path-medium-labyrinth.npy  path-simple-labyrinth.npy  path-test.py  path.npy  path_custom_auto.pkl  path_simple_auto.pkl  requirements.txt
Calibration/: Calibration.ino  Calibration.py  DataX.csv  DataX1.csv  DataX2.csv  DataX3.csv  DataX4.csv  DataX5.csv  DataX6.csv  DataY.csv  DataY1.csv  DataY2.csv  DataY3.csv  DataY4.csv  DataY5.csv  DataY6.csv
HighLevelController/: HighLevelController.py  NearestPointController.py  NextNearestPointController.py  PathFindingNearestPointController.py
Labyrinth/: LabyrinthDetection.py  LabyrinthSolver.py  Visualization.py  WallDetector.py
Nets/: DataRecorder.py  LabelingScript.py  Training.ipynb
Servo-Control/: CMakeLists.txt
Servo-Control/src/: main.cpp
ServoControl/: ServoControl.ino
ServoControl/ServoTest/: ServoTest.ino
analysis/: ControlSignalAnalysis.py  FollowingScoreCalculator.py  PlotAll.py  ServoAngleAcceleration.py  TiltCorrectionAvgDiff.py  TrajectoryPlot.py
controllers/: Controllers.py
helpers/ArduinoRTTMeasurement/: ArduinoRTTMeasurement.ino  Measure.py
simulation/: SimulationInterface.py
simulation/PhysicSimulation/: CMakeLists.txt  Config.h  Hole.cpp  Hole.h  Simulation.cpp  Simulation.h  Wall.cpp  Wall.h  main.cpp  score3.csv
simulation/PhysicSimulation/math/: Vector2.cpp  Vector2.h
store/: index.csv
test/: AccumEval.py  CircleDetection.ipynb  EventAccumulation.py  FocalDetection.ipynb  LabyrinthDetectionTest.py  PositionTracking.py  Servo-Test.py
utils/: AttachUSB.py  CNNUtils.py  CameraCalibration.py  ControlUtils.py  FrameUtils.py  PathGenerator.py  Plotting.py  store.py
utils/corner-detection-tester/: find-corners.py
utils/latency-measurement/: MeasureLatency.py  MeasureLatencyServo.py  MeasureRTT.py  (+2 more)
(+2 files in other folders)
